@@ -75,71 +75,67 @@ import org.jetbrains.uast.util.UastExpressionUtils;
 import org.jetbrains.uast.visitor.AbstractUastVisitor;
 
 /**
- * Looks for performance issues in Java files, such as memory allocations during
- * drawing operations and using HashMap instead of SparseArray.
+ * Looks for performance issues in Java files, such as memory allocations during drawing operations
+ * and using HashMap instead of SparseArray.
  */
 public class JavaPerformanceDetector extends Detector implements SourceCodeScanner {
 
-    private static final Implementation IMPLEMENTATION = new Implementation(
-            JavaPerformanceDetector.class,
-            Scope.JAVA_FILE_SCOPE);
+    private static final Implementation IMPLEMENTATION =
+            new Implementation(JavaPerformanceDetector.class, Scope.JAVA_FILE_SCOPE);
 
     /** Allocating objects during a paint method */
-    public static final Issue PAINT_ALLOC = Issue.create(
-            "DrawAllocation",
-            "Memory allocations within drawing code",
-
-            "You should avoid allocating objects during a drawing or layout operation. These " +
-            "are called frequently, so a smooth UI can be interrupted by garbage collection " +
-            "pauses caused by the object allocations.\n" +
-            "\n" +
-            "The way this is generally handled is to allocate the needed objects up front " +
-            "and to reuse them for each drawing operation.\n" +
-            "\n" +
-            "Some methods allocate memory on your behalf (such as `Bitmap.create`), and these " +
-            "should be handled in the same way.",
-
-            Category.PERFORMANCE,
-            9,
-            Severity.WARNING,
-            IMPLEMENTATION);
+    public static final Issue PAINT_ALLOC =
+            Issue.create(
+                    "DrawAllocation",
+                    "Memory allocations within drawing code",
+                    "You should avoid allocating objects during a drawing or layout operation. These "
+                            + "are called frequently, so a smooth UI can be interrupted by garbage collection "
+                            + "pauses caused by the object allocations.\n"
+                            + "\n"
+                            + "The way this is generally handled is to allocate the needed objects up front "
+                            + "and to reuse them for each drawing operation.\n"
+                            + "\n"
+                            + "Some methods allocate memory on your behalf (such as `Bitmap.create`), and these "
+                            + "should be handled in the same way.",
+                    Category.PERFORMANCE,
+                    9,
+                    Severity.WARNING,
+                    IMPLEMENTATION);
 
     /** Using HashMaps where SparseArray would be better */
-    public static final Issue USE_SPARSE_ARRAY = Issue.create(
-            "UseSparseArrays",
-            "HashMap can be replaced with SparseArray",
-
-            "For maps where the keys are of type integer, it's typically more efficient to " +
-            "use the Android `SparseArray` API. This check identifies scenarios where you might " +
-            "want to consider using `SparseArray` instead of `HashMap` for better performance.\n" +
-            "\n" +
-            "This is **particularly** useful when the value types are primitives like ints, " +
-            "where you can use `SparseIntArray` and avoid auto-boxing the values from `int` to " +
-            "`Integer`.\n" +
-            "\n" +
-            "If you need to construct a `HashMap` because you need to call an API outside of " +
-            "your control which requires a `Map`, you can suppress this warning using for " +
-            "example the `@SuppressLint` annotation.",
-
-            Category.PERFORMANCE,
-            4,
-            Severity.WARNING,
-            IMPLEMENTATION);
+    public static final Issue USE_SPARSE_ARRAY =
+            Issue.create(
+                    "UseSparseArrays",
+                    "HashMap can be replaced with SparseArray",
+                    "For maps where the keys are of type integer, it's typically more efficient to "
+                            + "use the Android `SparseArray` API. This check identifies scenarios where you might "
+                            + "want to consider using `SparseArray` instead of `HashMap` for better performance.\n"
+                            + "\n"
+                            + "This is **particularly** useful when the value types are primitives like ints, "
+                            + "where you can use `SparseIntArray` and avoid auto-boxing the values from `int` to "
+                            + "`Integer`.\n"
+                            + "\n"
+                            + "If you need to construct a `HashMap` because you need to call an API outside of "
+                            + "your control which requires a `Map`, you can suppress this warning using for "
+                            + "example the `@SuppressLint` annotation.",
+                    Category.PERFORMANCE,
+                    4,
+                    Severity.WARNING,
+                    IMPLEMENTATION);
 
     /** Using {@code new Integer()} instead of the more efficient {@code Integer.valueOf} */
-    public static final Issue USE_VALUE_OF = Issue.create(
-            "UseValueOf",
-            "Should use `valueOf` instead of `new`",
-
-            "You should not call the constructor for wrapper classes directly, such as" +
-            "`new Integer(42)`. Instead, call the `valueOf` factory method, such as " +
-            "`Integer.valueOf(42)`. This will typically use less memory because common integers " +
-            "such as 0 and 1 will share a single instance.",
-
-            Category.PERFORMANCE,
-            4,
-            Severity.WARNING,
-            IMPLEMENTATION);
+    public static final Issue USE_VALUE_OF =
+            Issue.create(
+                    "UseValueOf",
+                    "Should use `valueOf` instead of `new`",
+                    "You should not call the constructor for wrapper classes directly, such as"
+                            + "`new Integer(42)`. Instead, call the `valueOf` factory method, such as "
+                            + "`Integer.valueOf(42)`. This will typically use less memory because common integers "
+                            + "such as 0 and 1 will share a single instance.",
+                    Category.PERFORMANCE,
+                    4,
+                    Severity.WARNING,
+                    IMPLEMENTATION);
 
     static final String ON_MEASURE = "onMeasure";
     static final String ON_DRAW = "onDraw";
@@ -150,8 +146,7 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
     public static final String CLASS_CANVAS = "android.graphics.Canvas";
 
     /** Constructs a new {@link JavaPerformanceDetector} check */
-    public JavaPerformanceDetector() {
-    }
+    public JavaPerformanceDetector() {}
 
     // ---- implements SourceCodeScanner ----
 
@@ -192,16 +187,17 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
         @Override
         public void visitCallExpression(@NonNull UCallExpression node) {
             UastCallKind kind = node.getKind();
-            if (kind == UastCallKind.CONSTRUCTOR_CALL ||
-                    kind == UastCallKind.NEW_ARRAY_WITH_DIMENSIONS ||
-                    kind == UastCallKind.NEW_ARRAY_WITH_INITIALIZER) {
+            if (kind == UastCallKind.CONSTRUCTOR_CALL
+                    || kind == UastCallKind.NEW_ARRAY_WITH_DIMENSIONS
+                    || kind == UastCallKind.NEW_ARRAY_WITH_INITIALIZER) {
                 visitConstructorCallExpression(node, kind != UastCallKind.CONSTRUCTOR_CALL);
             } else if (UastExpressionUtils.isMethodCall(node)) {
                 visitMethodCallExpression(node);
             }
         }
 
-        private void visitConstructorCallExpression(@NonNull UCallExpression node, boolean isArray) {
+        private void visitConstructorCallExpression(
+                @NonNull UCallExpression node, boolean isArray) {
             String typeName = null;
             UReferenceExpression classReference = node.getClassReference();
             if (mCheckMaps || mCheckValueOf) {
@@ -224,24 +220,30 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
             if (!isArray && mCheckValueOf) {
                 if (typeName != null
                         && (typeName.equals(TYPE_INTEGER_WRAPPER)
-                        || typeName.equals(TYPE_BOOLEAN_WRAPPER)
-                        || typeName.equals(TYPE_FLOAT_WRAPPER)
-                        || typeName.equals(TYPE_CHARACTER_WRAPPER)
-                        || typeName.equals(TYPE_LONG_WRAPPER)
-                        || typeName.equals(TYPE_DOUBLE_WRAPPER)
-                        || typeName.equals(TYPE_BYTE_WRAPPER))
+                                || typeName.equals(TYPE_BOOLEAN_WRAPPER)
+                                || typeName.equals(TYPE_FLOAT_WRAPPER)
+                                || typeName.equals(TYPE_CHARACTER_WRAPPER)
+                                || typeName.equals(TYPE_LONG_WRAPPER)
+                                || typeName.equals(TYPE_DOUBLE_WRAPPER)
+                                || typeName.equals(TYPE_BYTE_WRAPPER))
                         //&& node.astTypeReference().astParts().size() == 1
                         && node.getValueArgumentCount() == 1) {
                     String argument = node.getValueArguments().get(0).asSourceString();
 
                     String replacedType = typeName.substring(typeName.lastIndexOf('.') + 1);
-                    LintFix fix = LintFix.create()
-                            .name("Replace with valueOf()").replace()
-                            .pattern("(new\\s+" + replacedType + ")")
-                            .with(replacedType + ".valueOf")
-                            .build();
-                    mContext.report(USE_VALUE_OF, node, mContext.getLocation(node),
-                            getUseValueOfErrorMessage(typeName, argument), fix);
+                    LintFix fix =
+                            LintFix.create()
+                                    .name("Replace with valueOf()")
+                                    .replace()
+                                    .pattern("(new\\s+" + replacedType + ")")
+                                    .with(replacedType + ".valueOf")
+                                    .build();
+                    mContext.report(
+                            USE_VALUE_OF,
+                            node,
+                            mContext.getLocation(node),
+                            getUseValueOfErrorMessage(typeName, argument),
+                            fix);
                 }
             }
 
@@ -252,7 +254,8 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
                 // mInDraw as true, in case we've left it and we're in a static
                 // block or something:
                 UMethod method = UastUtils.getParentOfType(node, UMethod.class);
-                if (method != null && isBlockedAllocationMethod(method)
+                if (method != null
+                        && isBlockedAllocationMethod(method)
                         && !isLazilyInitialized(node)) {
                     reportAllocation(node);
                 }
@@ -261,9 +264,12 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
 
         private void reportAllocation(UCallExpression node) {
             Location location = mContext.getLocation(node);
-            mContext.report(PAINT_ALLOC, node, location,
-                "Avoid object allocations during draw/layout operations (preallocate and " +
-                "reuse instead)");
+            mContext.report(
+                    PAINT_ALLOC,
+                    node,
+                    location,
+                    "Avoid object allocations during draw/layout operations (preallocate and "
+                            + "reuse instead)");
         }
 
         private void visitMethodCallExpression(UCallExpression node) {
@@ -279,44 +285,53 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
                 return;
             }
             // Look for forbidden methods
-            if (functionName.equals("createBitmap")
-                    || functionName.equals("createScaledBitmap")) {
+            if (functionName.equals("createBitmap") || functionName.equals("createScaledBitmap")) {
                 PsiMethod method = node.resolve();
-                if (method != null && mContext.getEvaluator().isMemberInClass(method,
-                        "android.graphics.Bitmap") && !isLazilyInitialized(node)) {
+                if (method != null
+                        && mContext.getEvaluator()
+                                .isMemberInClass(method, "android.graphics.Bitmap")
+                        && !isLazilyInitialized(node)) {
                     reportAllocation(node);
                 }
             } else if (functionName.startsWith("decode")) {
                 // decodeFile, decodeByteArray, ...
                 PsiMethod method = node.resolve();
-                if (method != null && mContext.getEvaluator().isMemberInClass(method,
-                        "android.graphics.BitmapFactory") && !isLazilyInitialized(node)) {
+                if (method != null
+                        && mContext.getEvaluator()
+                                .isMemberInClass(method, "android.graphics.BitmapFactory")
+                        && !isLazilyInitialized(node)) {
                     reportAllocation(node);
                 }
             } else if (functionName.equals("getClipBounds")) {
                 if (node.getValueArgumentCount() == 0) {
                     Location callLocation = mContext.getLocation(node);
-                    mContext.report(PAINT_ALLOC, node, callLocation,
-                            "Avoid object allocations during draw operations: Use " +
-                            "`Canvas.getClipBounds(Rect)` instead of `Canvas.getClipBounds()` " +
-                            "which allocates a temporary `Rect`");
+                    mContext.report(
+                            PAINT_ALLOC,
+                            node,
+                            callLocation,
+                            "Avoid object allocations during draw operations: Use "
+                                    + "`Canvas.getClipBounds(Rect)` instead of `Canvas.getClipBounds()` "
+                                    + "which allocates a temporary `Rect`");
                 }
             }
         }
 
         /**
-         * Check whether the given invocation is done as a lazy initialization,
-         * e.g. {@code if (foo == null) foo = new Foo();}.
-         * <p>
-         * This tries to also handle the scenario where the check is on some
-         * <b>other</b> variable - e.g.
+         * Check whether the given invocation is done as a lazy initialization, e.g. {@code if (foo
+         * == null) foo = new Foo();}.
+         *
+         * <p>This tries to also handle the scenario where the check is on some <b>other</b>
+         * variable - e.g.
+         *
          * <pre>
          *    if (foo == null) {
          *        foo == init1();
          *        bar = new Bar();
          *    }
          * </pre>
+         *
          * or
+         *
          * <pre>
          *    if (!initialized) {
          *        initialized = true;
@@ -347,14 +362,13 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
                         List<String> references = new ArrayList<>();
                         addReferencedVariables(references, ifNode.getCondition());
                         if (!references.isEmpty()) {
-                            SetView<String> intersection = Sets.intersection(
-                                    new HashSet<>(assignments),
-                                    new HashSet<>(references));
+                            SetView<String> intersection =
+                                    Sets.intersection(
+                                            new HashSet<>(assignments), new HashSet<>(references));
                             return !intersection.isEmpty();
                         }
                     }
                     return false;
-
                 }
                 curr = curr.getUastParent();
             }
@@ -365,8 +379,7 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
         /** Adds any variables referenced in the given expression into the given list */
         // TODO: This is old, bogus code. We should switch to a simple PsiVariable visitor!
         private static void addReferencedVariables(
-                @NonNull Collection<String> variables,
-                @Nullable UExpression expression) {
+                @NonNull Collection<String> variables, @Nullable UExpression expression) {
             if (expression instanceof UPolyadicExpression) {
                 UPolyadicExpression polyadicExpression = (UPolyadicExpression) expression;
                 for (UExpression operand : polyadicExpression.getOperands()) {
@@ -382,16 +395,18 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
                 UParenthesizedExpression exp = (UParenthesizedExpression) expression;
                 addReferencedVariables(variables, exp.getExpression());
             } else if (expression instanceof USimpleNameReferenceExpression) {
-                USimpleNameReferenceExpression reference = (USimpleNameReferenceExpression) expression;
+                USimpleNameReferenceExpression reference =
+                        (USimpleNameReferenceExpression) expression;
                 variables.add(reference.getIdentifier());
             } else if (expression instanceof UQualifiedReferenceExpression) {
                 UQualifiedReferenceExpression ref = (UQualifiedReferenceExpression) expression;
                 UExpression receiver = ref.getReceiver();
                 UExpression selector = ref.getSelector();
                 if (receiver instanceof UThisExpression || receiver instanceof USuperExpression) {
-                    String identifier = (selector instanceof USimpleNameReferenceExpression)
-                            ? ((USimpleNameReferenceExpression) selector).getIdentifier()
-                            : null;
+                    String identifier =
+                            (selector instanceof USimpleNameReferenceExpression)
+                                    ? ((USimpleNameReferenceExpression) selector).getIdentifier()
+                                    : null;
                     if (identifier != null) {
                         variables.add(identifier);
                     }
@@ -400,8 +415,8 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
         }
 
         /**
-         * Returns whether the given method declaration represents a method
-         * where allocating objects is not allowed for performance reasons
+         * Returns whether the given method declaration represents a method where allocating objects
+         * is not allowed for performance reasons
          */
         private boolean isBlockedAllocationMethod(@NonNull PsiMethod node) {
             JavaEvaluator evaluator = mContext.getEvaluator();
@@ -412,54 +427,48 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
         }
 
         /**
-         * Returns true if this method looks like it's overriding android.view.View's
-         * {@code protected void onDraw(Canvas canvas)}
+         * Returns true if this method looks like it's overriding android.view.View's {@code
+         * protected void onDraw(Canvas canvas)}
          */
         private static boolean isOnDrawMethod(
-                @NonNull JavaEvaluator evaluator,
-                @NonNull PsiMethod node) {
+                @NonNull JavaEvaluator evaluator, @NonNull PsiMethod node) {
             return ON_DRAW.equals(node.getName()) && evaluator.parametersMatch(node, CLASS_CANVAS);
         }
 
         /**
-         * Returns true if this method looks like it's overriding
-         * android.view.View's
-         * {@code protected void onLayout(boolean changed, int left, int top,
-         *      int right, int bottom)}
+         * Returns true if this method looks like it's overriding android.view.View's {@code
+         * protected void onLayout(boolean changed, int left, int top, int right, int bottom)}
          */
         private static boolean isOnLayoutMethod(
-                @NonNull JavaEvaluator evaluator,
-                @NonNull PsiMethod node) {
-            return ON_LAYOUT.equals(node.getName()) && evaluator.parametersMatch(node,
-                    TYPE_BOOLEAN, TYPE_INT, TYPE_INT, TYPE_INT, TYPE_INT);
+                @NonNull JavaEvaluator evaluator, @NonNull PsiMethod node) {
+            return ON_LAYOUT.equals(node.getName())
+                    && evaluator.parametersMatch(
+                            node, TYPE_BOOLEAN, TYPE_INT, TYPE_INT, TYPE_INT, TYPE_INT);
         }
 
         /**
-         * Returns true if this method looks like it's overriding android.view.View's
-         * {@code protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec)}
+         * Returns true if this method looks like it's overriding android.view.View's {@code
+         * protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec)}
          */
         private static boolean isOnMeasureMethod(
-                @NonNull JavaEvaluator evaluator,
-                @NonNull PsiMethod node) {
-            return ON_MEASURE.equals(node.getName()) && evaluator.parametersMatch(node,
-                    TYPE_INT, TYPE_INT);
+                @NonNull JavaEvaluator evaluator, @NonNull PsiMethod node) {
+            return ON_MEASURE.equals(node.getName())
+                    && evaluator.parametersMatch(node, TYPE_INT, TYPE_INT);
         }
 
         /**
-         * Returns true if this method looks like it's overriding android.view.View's
-         * {@code public void layout(int l, int t, int r, int b)}
+         * Returns true if this method looks like it's overriding android.view.View's {@code public
+         * void layout(int l, int t, int r, int b)}
          */
         private static boolean isLayoutMethod(
-                @NonNull JavaEvaluator evaluator,
-                @NonNull PsiMethod node) {
-            return LAYOUT.equals(node.getName()) && evaluator.parametersMatch(node,
-                    TYPE_INT, TYPE_INT, TYPE_INT, TYPE_INT);
+                @NonNull JavaEvaluator evaluator, @NonNull PsiMethod node) {
+            return LAYOUT.equals(node.getName())
+                    && evaluator.parametersMatch(node, TYPE_INT, TYPE_INT, TYPE_INT, TYPE_INT);
         }
 
         /**
-         * Checks whether the given constructor call and type reference refers
-         * to a HashMap constructor call that is eligible for replacement by a
-         * SparseArray call instead
+         * Checks whether the given constructor call and type reference refers to a HashMap
+         * constructor call that is eligible for replacement by a SparseArray call instead
          */
         private void checkHashMap(@NonNull UCallExpression node) {
             if (!mContext.getProject().isAndroidProject()) {
@@ -473,29 +482,43 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
                 if (TYPE_INTEGER_WRAPPER.equals(typeName) || TYPE_BYTE_WRAPPER.equals(typeName)) {
                     String valueType = types.get(1).getCanonicalText();
                     if (valueType.equals(TYPE_INTEGER_WRAPPER)) {
-                        mContext.report(USE_SPARSE_ARRAY, node, mContext.getLocation(node),
-                            "Use new `SparseIntArray(...)` instead for better performance");
+                        mContext.report(
+                                USE_SPARSE_ARRAY,
+                                node,
+                                mContext.getLocation(node),
+                                "Use new `SparseIntArray(...)` instead for better performance");
                     } else if (valueType.equals(TYPE_LONG_WRAPPER) && minSdk >= 18) {
-                        mContext.report(USE_SPARSE_ARRAY, node, mContext.getLocation(node),
+                        mContext.report(
+                                USE_SPARSE_ARRAY,
+                                node,
+                                mContext.getLocation(node),
                                 "Use `new SparseLongArray(...)` instead for better performance");
                     } else if (valueType.equals(TYPE_BOOLEAN_WRAPPER)) {
-                        mContext.report(USE_SPARSE_ARRAY, node, mContext.getLocation(node),
+                        mContext.report(
+                                USE_SPARSE_ARRAY,
+                                node,
+                                mContext.getLocation(node),
                                 "Use `new SparseBooleanArray(...)` instead for better performance");
                     } else {
-                        mContext.report(USE_SPARSE_ARRAY, node, mContext.getLocation(node),
-                            String.format(
-                                "Use `new SparseArray<%1$s>(...)` instead for better performance",
-                              valueType.substring(valueType.lastIndexOf('.') + 1)));
+                        mContext.report(
+                                USE_SPARSE_ARRAY,
+                                node,
+                                mContext.getLocation(node),
+                                String.format(
+                                        "Use `new SparseArray<%1$s>(...)` instead for better performance",
+                                        valueType.substring(valueType.lastIndexOf('.') + 1)));
                     }
-                } else if (TYPE_LONG_WRAPPER.equals(typeName) && (minSdk >= 16 ||
-                        Boolean.TRUE == mContext.getMainProject().dependsOn(
-                                SUPPORT_LIB_ARTIFACT))) {
+                } else if (TYPE_LONG_WRAPPER.equals(typeName)
+                        && (minSdk >= 16
+                                || Boolean.TRUE
+                                        == mContext.getMainProject()
+                                                .dependsOn(SUPPORT_LIB_ARTIFACT))) {
                     boolean useBuiltin = minSdk >= 16;
-                    String message = useBuiltin ?
-                            "Use `new LongSparseArray(...)` instead for better performance" :
-                            "Use `new android.support.v4.util.LongSparseArray(...)` instead for better performance";
-                    mContext.report(USE_SPARSE_ARRAY, node, mContext.getLocation(node),
-                            message);
+                    String message =
+                            useBuiltin
+                                    ? "Use `new LongSparseArray(...)` instead for better performance"
+                                    : "Use `new android.support.v4.util.LongSparseArray(...)` instead for better performance";
+                    mContext.report(USE_SPARSE_ARRAY, node, mContext.getLocation(node), message);
                 }
             }
         }
@@ -505,10 +528,16 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
             if (types.size() == 1) {
                 String valueType = types.get(0).getCanonicalText();
                 if (valueType.equals(TYPE_INTEGER_WRAPPER)) {
-                    mContext.report(USE_SPARSE_ARRAY, node, mContext.getLocation(node),
-                        "Use `new SparseIntArray(...)` instead for better performance");
+                    mContext.report(
+                            USE_SPARSE_ARRAY,
+                            node,
+                            mContext.getLocation(node),
+                            "Use `new SparseIntArray(...)` instead for better performance");
                 } else if (valueType.equals(TYPE_BOOLEAN_WRAPPER)) {
-                    mContext.report(USE_SPARSE_ARRAY, node, mContext.getLocation(node),
+                    mContext.report(
+                            USE_SPARSE_ARRAY,
+                            node,
+                            mContext.getLocation(node),
                             "Use `new SparseBooleanArray(...)` instead for better performance");
                 }
             }
@@ -516,7 +545,8 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
     }
 
     private static String getUseValueOfErrorMessage(String typeName, String argument) {
-        return String.format("Use `%1$s.valueOf(%2$s)` instead",
+        return String.format(
+                "Use `%1$s.valueOf(%2$s)` instead",
                 typeName.substring(typeName.lastIndexOf('.') + 1), argument);
     }
 
@@ -534,8 +564,8 @@ public class JavaPerformanceDetector extends Detector implements SourceCodeScann
                 UExpression left = node.getLeftOperand();
                 if (left instanceof UQualifiedReferenceExpression) {
                     UQualifiedReferenceExpression ref = (UQualifiedReferenceExpression) left;
-                    if (ref.getReceiver() instanceof UThisExpression ||
-                            ref.getReceiver() instanceof USuperExpression) {
+                    if (ref.getReceiver() instanceof UThisExpression
+                            || ref.getReceiver() instanceof USuperExpression) {
                         PsiElement resolved = ref.resolve();
                         if (resolved instanceof PsiField) {
                             mVariables.add(((PsiField) resolved).getName());
